"%COMMIT_MESSAGE%"